<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Dialog"
    tools:context=".ui.dialog.DeleteCollectionDialog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:paddingTop="25dp"
                    android:text="@string/confirmation_delete_collection"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:text="@string/cancel"
                    android:background="@null"
                    android:drawableTint="@color/white"
                    />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:text="@string/delete"
                    android:background="@null"
                    android:drawableTint="@color/white"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>